compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__clause_guard_is_fault_tolerant_with_not_equals_and_binop.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn main(x: Int) {\n  case x {\n    _ if { x != \"\" } +. 2.0 -> 2\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(x: Int) {
  case x {
    _ if { x != "" } +. 2.0 -> 2
    _ -> 1
  }
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:10
  │
4 │     _ if { x != "" } +. 2.0 -> 2
  │          ^^^^^^^^^^^

Expected type:

    Float

Found type:

    Bool

error: Type mismatch
  ┌─ /src/one/two.gleam:4:10
  │
4 │     _ if { x != "" } +. 2.0 -> 2
  │          ^^^^^^^^^^^^^^^^^^

Expected type:

    Bool

Found type:

    Float

error: Type mismatch
  ┌─ /src/one/two.gleam:4:17
  │
4 │     _ if { x != "" } +. 2.0 -> 2
  │                 ^^

Expected type:

    Int

Found type:

    String
